# Satcom-Sec-P.A

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
config/: exemple_config.yml  readme.md
data/: readme.md
data/input/: readme.md
data/output/: readme.md
docs/: Crc.md  Fiche signalétique de projet.docx  dashboard.md  jamming.md  readme.md
scripts/: demo_image_channel.py  readme.md  run_phase0.py  run_phase1.py  run_step1_simple_communication.py  run_step2_add_spatial_noise.py  run_step3_add_reed_solomon.py
src/: __init__.py  config.py  creation-tram1.py  pipeline.py  readme.md
src/attacks/: __init__.py  _utils.py  alter_apid.py  alter_seq_count.py  frameAlteration.py  frame_alteration.py  fuzz_header.py  fuzz_payload.py  inject_packet.py  readme.md
src/channel/: __init__.py  jamming.py  readme.md  reed_solomon.py
src/crypto/: aes_cbc.py  readme.md
src/dashboard/: console.py  dashboard.py  readme.md
src/detection/: __init__.py  anomalyDetector.py  anomaly_detector.py  hmac_auth.py  readme.md  stream_pipeline.py  structural_ids.py
src/encoding/: encoder.py  readme.md
src/error_correction/: readme.md
src/pipeline/: readme.md
src/protocol/: frame.py  readme.md
src/receiver/: __init__.py  dataReconstructor.py  data_reconstructor.py  frameParser.py  frame_parser.py  frame_validator.py  readme.md
tests/: aes_cbc_test.py  creation-tram1.py  creation-tram2.py  dashboard_test.py  frame_alteration_test.py  readme.md  reception_test.py  test_channel_improvements.py
tests/legacy/: README.md  reading_image.py
