[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "satcom-sec"
version = "0.1.0"
description = "Modélisation et sécurisation d'une chaîne de communication satellite simulée."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "reedsolo",
    "pyyaml",
    "pillow",
    "pandas",
    "numpy",
    "plotly",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Les anciens brouillons conservés pour l'historique ne sont pas collectés.
norecursedirs = ["tests/legacy"]
